--- a/suppMat.tex
+++ b/suppMat.tex
@@ -370,7 +370,7 @@ However, when using a single surface to represent the whole VLR we can only deri
 \clearpage
 \section{Quantification and Visualisation of Lateral Root Primordium Deformation}
 \noindent
-The datasets served as a basis to perform an analysis of the lateral root deformation as a function of time. The analysis was inspired by the work of Graner~et~al.~\cite{graner_et_al_2008}. The idea is that the deformation can be computed using geometrical and topological properties of the underlying tissue. Since in our case we have a set of 3D cell nuclei for each time point (red nodes in Figure~\ref{fig:deformation}) we use their 3D positions to generate a triangulation (e.g. Delaunay triangulation) creating a surface that represents the tissue (see Figure~\ref{fig:deformation}). The deformation analysis can be performed object- or spatial-oriented. This means that either the deformation is evaluated and illustrated for each cell or the total area of interest is subdivided into regions of equal sizes to measure the deformation within each subregion. We consider the former case because we want to focus on individual cell changes. Besides, the initial number of cells in each dataset is quite small and therefore, the total area of interest is not covered by all cells which makes an object-oriented analysis per cell more reasonable.
+The datasets served as a basis to perform an analysis of the lateral root deformation as a function of time. The analysis was inspired by the work of Graner~et~al.~\cite{graner_et_al_2008}. The idea is that the deformation can be computed using geometrical and topological properties of the underlying tissue. Since in our case we have a set of 3D cell nuclei for each time point (red nodes in Figure~\ref{fig:deformation}) that accurately mark the position of the cell (the nuclei do not move within a cell), we use their 3D positions to generate a triangulation (e.g. Delaunay triangulation) creating a surface that represents the tissue (see Figure~\ref{fig:deformation}). The deformation analysis can be performed object- or spatial-oriented. This means that either the deformation is evaluated and illustrated for each cell or the total area of interest is subdivided into regions of equal sizes to measure the deformation within each subregion. We consider the former case because we want to focus on individual cell changes. Besides, the initial number of cells in each dataset is quite small and therefore, the total area of interest is not covered by all cells which makes an object-oriented analysis per cell more reasonable.
 %
 \begin{figure}[htbp]
 	\begin{center}
@@ -387,7 +387,7 @@ The datasets served as a basis to perform an analysis of the lateral root deform
 
 \subsection{Computation of Geometrical and Topological Contributions}
 \noindent
-The generated triangulation provides a neighbourhood information for each cell nucleus and we can further analyse the deformation of a cell over time. Let $c_1$ be one cell with position $p_{c_1} = ( x_1, y_1, z_1 )^T$. Another cell $c_2$ with position $p_{c_2} = ( x_2, y_2, z_2 )^T$ is a neighbour of $c_1$ if both share an edge or link $l = p_{c_2} - p_{c_1}$. Note that $l$ and $-l$ represent the same role of deformation but to be invariant under the change $l \rightarrow -l$, a \textit{link matrix} $m$ is used~\cite{graner_et_al_2008}:
+The generated triangulation provides a neighbourhood information for each cell nucleus and we can further analyse the deformation of a cell over time. Let $c_1$ be one cell with position $p_{c_1} = ( x_1, y_1, z_1 )$. Another cell $c_2$ with position $p_{c_2} = ( x_2, y_2, z_2 )$ is a neighbour of $c_1$ if both share an edge or link $l = p_{c_2} - p_{c_1}$. Note that $l$ and $-l$ represent the same role of deformation but to be invariant under the change $l \rightarrow -l$, a \textit{link matrix} $m$ is used~\cite{graner_et_al_2008}:
 \begin{equation}
 m = l \otimes l =
 \begin{pmatrix}
@@ -819,7 +819,7 @@ We run several simulations of one model using division rules with randomized var
 	\end{center}
 \end{figure}
 %
-For this purpose, we modify the visualisation of the division sequence trees. Let $l$ be the sequence length for a generated layer (e.g.\ $l=3$ for $012$). We replace the x-axis showing the time points by a fixed temporal layout of the tree in which the pair of upper concurrently generated layers (with identical number sequence except for the last number) always occur first (slight translation to the left) with respect to its lower layers with almost the same division sequence (except for the $(l-1)$-th number). For example, the pair of layers $0111/0112$ are combined because their sequences only differ in the last number. This pair is compared with the pair $0121/0122$ because they differ in the third ($l-1 = 4-1 = 3$) position of the sequence. For each such a comparison we render a rectangle that includes these two pairs of layers and its colour is set to red or green. The rectangle is green if in more than $50 \%$ of the model simulations the upper layer occurred first with respect to the lower one and else we colour it red. This allows an immediate visual feedback of the high-order pattern while detailed information about the percentage and number of possible comparisons are given in the mid of each rectangle (see Figure~\ref{fig:averagedTreeDivisionSequence}). A comparison between pair of layers is not possible if only one pair of layers is generated or none at all. The averaged division sequence trees for our six model results are shown in Figure~\ref{fig:Modeldivisions}. We also use a simplified version of this tree when the number of simulations as well as the sequence labels can be ignored (see Figure 5B,E,H,K,N).
+For this purpose, we modify the visualisation of the division sequence trees. Let $l$ be the sequence length for a generated layer (e.g.\ $l=3$ for $012$). We replace the x-axis showing the time points by a fixed temporal layout of the tree in which the pair of upper concurrently generated layers (with identical number sequence except for the last number) always occur first (slight translation to the left) with respect to its lower layers with almost the same division sequence (except for the $(l-1)$-th number). For example, the pair of layers $0111/0112$ are combined because their sequences only differ in the last number. This pair is compared with the pair $0121/0122$ because they differ in the third ($l-1 = 4-1 = 3$) position of the sequence. For each such a comparison we render a rectangle that includes these two pairs of layers and its colour is set to red or green. The rectangle is green if in more than $50 \%$ of the model simulations the upper layer occurred first with respect to the lower one and else we colour it red. This allows an immediate visual feedback of the high-order pattern while detailed information about the percentage and number of possible comparisons are given in the mid of each rectangle (see Figure~\ref{fig:averagedTreeDivisionSequence}). A comparison between pair of layers is not possible if only one pair of layers is generated or none at all. We also use a simplified version of this tree when the number of simulations as well as the sequence labels can be ignored (see Figure 5B,E,H,K,N).
 
 \clearpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1140,7 +1140,7 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 	\end{overpic}
 \caption[Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM).]
 {{\bf Arabidopsis plant after imaging in the monolithic Digital Scanned Laser Light Sheet-based Fluorescence Microscope (mDSLM).} 
-(Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition.}
+Arabidopsis plant in the mDSLM sample holder capillary inside of a petri dish seven weeks after the imaging acquisition.}
 	\label{fig:mDSLM}
 \end{figure}
 
@@ -1267,10 +1267,10 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=.88\linewidth]{images/MasterCellFile_time_of_divisions.pdf}
+	\begin{overpic}[width=1.\linewidth]{images/MasterCellFile_time_of_divisions_v2.pdf}
 	\end{overpic}
 \caption[Timing of each division per cell file.]
-{{\bf Timing of each division per cell file.} For each indicated round of division (sub panels cycle 1$, \ldots$ Cycle 6), each cell division is plotted according to its cell file location and its time of occurrence (in 5mins time points). The dashed box indicates the master cell file. \TODO{@Alexis: why do we consider time points and not number of cells? Only one dataset or all of them? What are the small orange lines? Maybe use another layout: see Daniels version.}
+{{\bf Timing of each division per cell file.} For each indicated round of division (sub panels cycle 1$, \ldots$ Cycle 6), each cell division is plotted according to its cell file location and its time of occurrence (since the first division). The dashed box indicates the master cell file. All datasets are considered.
 }
 	\label{fig:mastertimediv}
 \end{figure}
@@ -1313,6 +1313,16 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 %
 \begin{figure}[htbp]
 \centering
+	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets-131203_compressed.pdf}
+	\end{overpic}
+\caption[ Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.]
+{{\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.} Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of \emph{pPIN1::PIN1-GFP }is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are in Table~\ref{tab:metadata}.}
+\label{fig:auroraRaw}
+\end{figure}
+\clearpage
+%
+\begin{figure}[htbp]
+\centering
 	\begin{overpic}[width=0.7\linewidth]{images/LRP-auroraRAW_compressed.pdf}
 	\end{overpic}
 \caption[Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. ]
@@ -1321,23 +1331,12 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 \end{figure}
 \clearpage
 %
-
-\begin{figure}[htbp]
-\centering
-	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets-131203_compressed.pdf}
-	\end{overpic}
-\caption[ Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.]
-{{\bf Time lapse recording of lateral root primordia development in the \emph{aurora} double mutant.} Five time points of a longitudinal section (side view) and a transverse section (radial view). Time is relative to the point of gravity-stimulation. The signal of pPIN1::PIN1-GFP is shown. Scale bar: 20 $\mu$m. Detailed recording metadata are in Table~\ref{tab:metadata}.}
-\label{fig:auroraRaw}
-\end{figure}
-\clearpage
-
 \begin{figure}[htbp]
 \centering
 	\begin{overpic}[width=1.0\linewidth]{images/Model_visu.pdf}
 	\end{overpic}
 \caption[Alternative visualisations of the model results.]
-{{\bf Alternative visualisations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}), the models at the end of the simulation are represented. Three types of visualisation are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colours indicate the layers as illustrated in Figure 2D (main text). The positions of the rendered spheres are given by the centres of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines (cylinders) are drawn for at least two cells through the centres of mass of the corresponding cells.
+{{\bf Alternative visualisations of the model results.} For each model scenario (see Section~\ref{sec:modelScenarios} and Figure 5 in the main text), the models at the end of the simulation are represented. Three types of visualisation are used: cell contours (top), nuclei (middle) and adjacent cell layers (bottom). Colours indicate the layers as illustrated in Figure 2D (main text). The positions of the rendered spheres are given by the centres of mass of each cell. The third representation displays the cell layers between adjacent cells that share the same layer value. Cells are adjacent if they share at least one common cell wall. The lines (cylinders) are drawn for at least two cells through the centres of mass of the corresponding cells.
 }
 \label{fig:visumodel}
 \end{figure}
@@ -1345,12 +1344,12 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=1.0\linewidth]{images/Model_divisions.pdf}
+	\begin{overpic}[width=1.0\linewidth]{images/Model_supp.pdf}
 	\end{overpic}
-\caption[Averaged division sequence trees for the model results.]
-{{\bf Averaged division sequence trees for the model results.} For each model scenario (see Section~\ref{sec:modelScenarios}) with 100 simulations, an averaged division sequence tree is shown (see Section~\ref{sec:visualAnalysis}) that illustrates the percentage in which the upper layers were generated before the lower ones.
+\caption[Additional models of lateral root morphogenesis.]
+{{\bf Additional models of lateral root morphogenesis.} For each indicated model scenario (see Section~\ref{sec:modelScenarios}) with 100 simulations, the models at the end of the simulation are represented in 5A, B). In (C, D) an averaged division sequence tree is shown (see Section~\ref{sec:visualAnalysis}) that illustrates the percentage in which the upper layers were generated before the lower ones. In (E, F) the pie charts indicate the proportion of alternating divisions (in blue) in the indicated division rounds.
 }
-\label{fig:Modeldivisions}
+\label{fig:Modelsupp}
 \end{figure}
 %
 
@@ -1377,16 +1376,16 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
 
 \begin{Itemize}
   \item Recording of the entire process of lateral root formation. Corresponds to Figure 1B (main text) \href{http://youtu.be/navcxqh7KCo}{\textcolor{blue}{[LINK]}}.
-  \item Time lapse recording of individual datasets:
-  \begin{Itemize}
-  	\item Time lapse recording \#120803 \href{http://youtu.be/hvoDhoWLdSI}{\textcolor{blue}{[LINK]}}.
-    \item Time lapse recording \#121204 \href{http://youtu.be/bXf-gO8T0aQ}{\textcolor{blue}{[LINK]}}.
-    \item Time lapse recording \#121211 \href{http://youtu.be/ru7-g3KWV9E}{\textcolor{blue}{[LINK]}}.
-    \item Time lapse recording \#130508 \href{http://youtu.be/GApOwRMWmUU}{\textcolor{blue}{[LINK]}}.
-    \item Time lapse recording \#130607 \href{http://youtu.be/cFemfGbI5yA}{\textcolor{blue}{[LINK]}}.
-  \end{Itemize}
+  % \item Time lapse recording of individual datasets:
+  % \begin{Itemize}
+  % 	\item Time lapse recording \#120803 \href{http://youtu.be/hvoDhoWLdSI}{\textcolor{blue}{[LINK]}}.
+  %   \item Time lapse recording \#121204 \href{http://youtu.be/bXf-gO8T0aQ}{\textcolor{blue}{[LINK]}}.
+  %   \item Time lapse recording \#121211 \href{http://youtu.be/ru7-g3KWV9E}{\textcolor{blue}{[LINK]}}.
+  %   \item Time lapse recording \#130508 \href{http://youtu.be/GApOwRMWmUU}{\textcolor{blue}{[LINK]}}.
+  %   \item Time lapse recording \#130607 \href{http://youtu.be/cFemfGbI5yA}{\textcolor{blue}{[LINK]}}.
+  % \end{Itemize}
   \item Virtual lateral roots datasets \href{https://youtu.be/JbXwgQ3P6h4}{\textcolor{blue}{[LINK]}}.
-  \item Synchronisation on the number of cells, radial view \href{http://youtu.be/YZFkpcnyjiY}{\textcolor{blue}{[LINK]}}.
+  % \item Synchronisation on the number of cells, radial view \href{http://youtu.be/YZFkpcnyjiY}{\textcolor{blue}{[LINK]}}.
   \item Average growth tensor for 20 steps. Corresponds to Figure 2B (main text) \href{https://youtu.be/t2hpMR6VFIg}{\textcolor{blue}{[LINK]}}.
   \item Layers formation in all datasets:
   \begin{Itemize}
@@ -1396,18 +1395,16 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
     \item Dataset \#121211 \href{http://youtu.be/NOouEVqpGj8}{\textcolor{blue}{[LINK]}}.
     \item Dataset \#130508 \href{http://youtu.be/EajarNlRvtA}{\textcolor{blue}{[LINK]}}.
   \end{Itemize}
-  \TODO{@Alexis: please update all model movies and their links.}
-  \item \emph{Geometric} model of lateral root formation, corresponding to Figure 5D (main text) \href{https://youtu.be/GLUKCE4nN3A}{\textcolor{blue}{[LINK]}}.
-  \item \emph{Random} model of lateral root formation, corresponding to Figure 5G (main text) \href{https://youtu.be/V9xkyPfRQeM}{\textcolor{blue}{[LINK]}}.
+  \item \emph{Geometric} model of lateral root formation, corresponding to Figure 5D (main text) \href{https://youtu.be/1bVEY_ORSfI}{\textcolor{blue}{[LINK]}}.
+  \item \emph{Random} model of lateral root formation, corresponding to Figure 5G (main text) \href{https://youtu.be/So1GQrtu41w}{\textcolor{blue}{[LINK]}}.
   \item \emph{1\textsuperscript{st} random then geometric} model of lateral root formation, corresponding to Figure 5J (main text)
-  \TODO{add movie link}
+  \href{https://youtu.be/H6RUvnqBTVA}{\textcolor{blue}{[LINK]}}.
   \item \emph{Basal growth} model of lateral root formation, corresponding to Figure 5M (main text) \href{https://youtu.be/TZqwYTnmAgg}{\textcolor{blue}{[LINK]}}.
-  \item \emph{1\textsuperscript{st} asymmetric then geometric} model of lateral root formation, corresponding to Figure~\ref{fig:visumodel} \href{https://youtu.be/ypBdyjFyqYw}{\textcolor{blue}{[LINK]}}.
-  \item \emph{Random with equal areas} model of lateral root formation, corresponding to Figure~\ref{fig:visumodel}
-  \TODO{add movie link}
-
-  \item Time lapse recording of the \emph{aur1-2 aur2-2} double mutant, dataset \#131203. Corresponds to Figure~\ref{fig:aurora} \href{http://youtu.be/y8b-0J4lPHg}{\textcolor{blue}{[LINK]}}.
-  \item Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant \href{http://youtu.be/kkQZub-puVI}{\textcolor{blue}{[LINK]}}.
+  \item \emph{1\textsuperscript{st} asymmetric then geometric} model of lateral root formation, corresponding to Figure~\ref{fig:Modelsupp} \href{https://youtu.be/ypBdyjFyqYw}{\textcolor{blue}{[LINK]}}.
+  \item \emph{Random with equal areas} model of lateral root formation, corresponding to Figure~\ref{fig:Modelsupp}
+  \href{https://youtu.be/gB-Qt0_H1ok}{\textcolor{blue}{[LINK]}}.
+  \item Time lapse recording of the \emph{aur1-2 aur2-2} double mutant, dataset \#131203. Corresponds to Figure~\ref{fig:auroraRaw} \href{http://youtu.be/y8b-0J4lPHg}{\textcolor{blue}{[LINK]}}.
+  \item Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. Corresponds to Figure~\ref{fig:aurora} \href{http://youtu.be/kkQZub-puVI}{\textcolor{blue}{[LINK]}}.
   \item Layer formation in the \emph{aur1-2 aur2-2} double mutant \href{http://youtu.be/FH5BJ177TGk}{\textcolor{blue}{[LINK]}}.
   \item Lateral root induction by gravistimulation \href{http://youtu.be/sLvVCbWye-E}{\textcolor{blue}{[LINK]}}.
   \item Sample preparation \href{https://youtu.be/uFdOIjmO9vI}{\textcolor{blue}{[LINK]}}.
